# bandcampsync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  dev.env  entrypoint.sh  ignores.template.txt  pyproject.toml  requirements.txt  run.py  setup.py  spam
.github/workflows/: ci.yml
bandcampsync/: __init__.py  bandcamp.py  config.py  download.py  ignores.py  logger.py  media.py  notify.py  options.py  sync.py
tests/: test_bandcamp.py  test_download.py  test_media.py  test_sync_item.py  test_syncer.py
tests/data/: collection-item-digital-only.json  collection-item-physical-only.json  download-choose-format.html  download-expired.html
