[project]
name = "bandcampsync"
version = "0.6.0"
description = "A Python module and script to synchronise media purchased on bandcamp.com with a local directory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "html5lib>=1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
